<resources>
    <string name="app_name">MacroApp</string>
    <string name="kontrahenci">Kontrahenci</string>
    <string name="detale_faktury">Detale Faktury</string>
    <string name="brak_faktur">Brak Faktur Dla Tego Kontrahenta</string>
    <string name="brak_kontrahentow">Brak Kontrahentow</string>
    <string name="brak_polaczenia">Wystąpił Problem Z Siecią</string>
    <string name="nabywca">Nabywca</string>
    <string name="szukaj">Szukaj</string>
    <string name="ilosc">#</string>
    <string name="cena_netto">C. net.</string>
    <string name="jednostka_miary">JM</string>
    <string name="liczba_porzadkowa">Lp</string>
    <string name="nazwa">Nazwa</string>
    <string name="vat">VAT</string>
    <string name="wartosc_brutto">W. brut.</string>
    <string name="wartosc_netto">W.net.</string>
    <string name="dateMin">1900.01.01</string>
    <string name="dateMax">2099.12.31</string>
    <string name="cenaMax">cena max</string>
    <string name="cenaMin">cena min</string>
    <string name="symbolHint">symbol</string>
</resources>
