<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmail.mateuszmonas.macroapp.fakturasearch.FakturaSearchActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/symbol"
            style="@style/searchTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/symbolHint"
            android:inputType="textPersonName"
            android:nextFocusDown="@+id/cenaMin"
            app:layout_constraintBottom_toTopOf="@+id/dateMax"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateMin"
            style="@style/searchTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/dateMin"
            app:layout_constraintBottom_toTopOf="@+id/cenaMin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/dateMax"
            app:layout_constraintTop_toBottomOf="@+id/symbol" />

        <TextView
            android:id="@+id/dateMax"
            style="@style/searchTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/dateMax"
            app:layout_constraintBottom_toTopOf="@+id/cenaMax"
            app:layout_constraintLeft_toRightOf="@+id/dateMin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/symbol" />

        <EditText
            android:id="@+id/cenaMin"
            style="@style/searchTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cenaMin"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:nextFocusForward="@+id/cenaMax"
            app:layout_constraintBottom_toTopOf="@+id/searchFaktury"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cenaMax"
            app:layout_constraintTop_toBottomOf="@+id/dateMin" />

        <EditText
            android:id="@+id/cenaMax"
            style="@style/searchTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cenaMax"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/searchFaktury"
            app:layout_constraintLeft_toRightOf="@+id/cenaMin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateMax" />

        <Button
            android:id="@+id/searchFaktury"
            style="@style/searchTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/szukaj"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cenaMax" />

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
